<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosplash"
    tools:context=".LoginActivity"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoINICIO"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logorosa"
        android:layout_gravity="center"
        android:transitionName="LogoTrans"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Log_titulo"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="textTrans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuarioTextFaild"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CorreoE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        //Contraseña

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#00FFFFFF" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraTextFaild"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOutlined2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/ocTextView"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:onClick="Olvido"
            android:text="@string/OlvidoC"

            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/iniciarSesion"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/btn_IniciarSesion"
                android:onClick="Siguiente3"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:backgroundTint="#FFFFFF"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/registrarse"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/btnReg"
                android:onClick="Siguiente"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorPrimaryDark" />
    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/invitado"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/btn_invitado"
        android:onClick="Invitado"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:iconTint="#FFFFFF" />
</LinearLayout>