<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosplash"
    tools:context=".LoginActivity"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoINICIO"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logorosa"
        android:layout_gravity="center"
        android:transitionName="LogoTrans"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Titulo_act"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="textTrans" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuarioTextFaild"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CorreoE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:transitionName="emailInputTextTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    //Contraseña

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#00FFFFFF" />







    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/recuperarBoton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/RecuperarContraseña"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:iconTint="#FFFFFF" />




    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#00FFFFFF" />


</LinearLayout>
