<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".TaichiActivity">

    <FrameLayout
        android:id="@+id/frame6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/config2"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#EEE4CDA7"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:menu="@menu/configuracion"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="Casa Serena"
                    app:titleMarginStart="40dp">

                    <ImageButton
                        android:id="@+id/conf2"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:onClick="Config11"
                        android:src="@drawable/ic_settings_black_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/Titulo_TC"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp">

                    <ImageButton
                        android:id="@+id/fisicas"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/ic_ying_yang" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/Txt1_TC"
                        android:textAlignment="center"
                        android:textColor="#F5000000"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#CDA58756"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/Sb1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="398dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/Txt2_TC"
                        android:textColor="#F5000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="229dp"
                        android:contentDescription="Todo"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/tachi" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#CDA58756"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/Sb2_TC"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="398dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/Txt3_TC"
                        android:textColor="#F5000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="398dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/Txt4_TC"
                        android:textColor="#F5000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="229dp"
                        android:layout_weight="1"
                        android:contentDescription="Todo"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/taichi_2" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/TC_fin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#EEE4CDA7"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>